[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
serde = "1.0.147"
tokio-postgres = "0.7.6"
